# github-big-proj14

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: README_CN.md  api_reference.md  architecture.md  deployment.md  getting_started.md  skill_development.md
omniforge/: __init__.py  cli.py
omniforge/agents/: __init__.py
omniforge/core/: __init__.py  design.py  engine.py  knowledge.py  workflow.py
omniforge/dashboard/: __init__.py
omniforge/examples/: __init__.py
omniforge/fixer/: __init__.py
omniforge/gate/: __init__.py
omniforge/integrations/: __init__.py
omniforge/mcp/: __init__.py
omniforge/skills/: __init__.py
omniforge/tests/: test_all.py
omniforge/trust/: __init__.py
omniforge/utils/: __init__.py
