[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniforge"
version = "1.0.0"
description = "AI-Native Digital Workshop Platform — Your all-in-one AI-powered creative and development ecosystem"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "lanekingkong", email = "lanekingkong@github.com"},
]
keywords = ["ai", "agent", "workshop", "automation", "knowledge-graph", "design-system", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "chromadb>=0.4",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=13.0",
    "asyncio>=3.4",
    "jinja2>=3.1",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "omniforge[dev]",
]

[project.scripts]
omniforge = "omniforge.cli:main"

[project.urls]
Homepage = "https://github.com/lanekingkong/omniforge"
Documentation = "https://github.com/lanekingkong/omniforge/docs"
Repository = "https://github.com/lanekingkong/omniforge"
Issues = "https://github.com/lanekingkong/omniforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["omniforge"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true